--- a/src/style.scss
+++ b/src/style.scss
@@ -46,6 +46,7 @@ table {
 .App {
   height: 100vh;
   width: 100vw;
+  padding: 10px;
   font-family: Monaco, Consolas, Monospace;
   font-size: 14px;
   background-color: rgb(18, 18, 68);
@@ -61,35 +62,34 @@ table {
   justify-items: center;
   align-items: center;
   > .circle {
-      height: calc(100% - 10px);
-      margin: 5px;
-      grid-area: profile-picture;
-      justify-self: end;
+    grid-area: profile-picture;
+    height: 50px;
+    height: calc(30px + 70%);
   }
 }
 
 header {
-  color: white;
   grid-area: name;
-  font-size: 14px;
+  color: white;
   font-size: calc(14px + 2vw);
-  justify-self: center;
   align-self: end;
   text-align: center;
+  margin: 0px 10px;
   > * {
-    padding: 5px;
+    padding: 2px;
   }
   h1, span {
     display: inline-block;
-    z-index: 1;
   }
   i {
+    padding: 5px;
     padding: 1vw;
   }
 }
 
 nav {
   grid-area: nav;
+  align-self: start;
   i {
     color: white;
     font-size: 30px;
@@ -117,25 +117,34 @@ main {
     "profile-picture name name"
     "nav main main"
     "nav main main";
+    > .circle {
+      margin-top: 30px;
+    }
+  }
+  header {
+    margin: 0px 30px;
   }
   nav {
     margin-top: 30px;
+    padding: 0px;
     color: black;
-    justify-self: start;
-    align-self: stretch;
+    justify-self: stretch;
     display: flex;
     flex-direction: column;
     justify-items: start;
-    align-items: stretch;
     i.fas.fa-bars {
       display: none;
     }
     span {
       display: inline-block;
-      padding: 10px 50px;
+      padding: 10px 30px;
       background-color: white;
       border: 1px solid black;
     }
+  }
+  main {
+    margin: 10px;
+    margin-left: 0px;
   }
 }
 
@@ -145,25 +154,22 @@ main {
     "profile-picture name name"
     "profile-picture nav nav"
     "main main main";
+    > .circle {
+      justify-self: end;
+    }
   }
   nav {
     margin-top: 0;
-    color: black;
     justify-self: center;
-    align-self: start;
-    display: flex;
     flex-direction: row;
     align-items: start;
-    i.fas.fa-bars {
-      display: none;
-    }
     span {
-      display: inline-block;
-      padding: 10px 30px;
-      background-color: white;
+      padding: 10px 3.5vw;
       transform: skewX(-10deg);
-      border: 1px solid black;
     }
+  }
+  main {
+    margin: 30px;
   }
 }
 
