Updated text for several sections

--- a/src/pages/Skills.scss
+++ b/src/pages/Skills.scss
@@ -11,6 +11,11 @@
     color: white;
 }
 
+.text-no-game {
+    font-weight: 900;
+    background-color: rgba(222, 220, 220,.5);
+}
+
 .game {
     display: flex;
     flex-direction: column;
