--- a/src/pages/Skills.scss
+++ b/src/pages/Skills.scss
@@ -1,3 +1,7 @@
+.Skills {
+    overflow: auto;
+}
+
 .Skills div {
     align-items: start;
     text-align: left;
@@ -24,7 +28,7 @@
     }
     div {
         display: inline-block;
-        width: 12vmin;
+        width: 8vmin;
         height: 8vmin;
         font-size: 1.5vmin;
         background-color: white;
@@ -32,6 +36,13 @@
         text-align: center;
     }
 }
+@media screen and (min-width: 760px) {
+.game {
+    div {
+        width: 12vmin;
+    }
+}
+}    
 .game div.covered{
     background-color: gray;
 }
