--- a/src/style.scss
+++ b/src/style.scss
@@ -132,6 +132,7 @@ header {
   i {
     padding: 5px;
     padding: 1vw;
+    color: white;
   }
 }
 
@@ -180,11 +181,15 @@ main {
   grid-area: main;
   align-self: flex-start;
   background-color: rgba(255, 255, 255, 0.65);
-  margin-top: 0px;
   width: calc(100% - 60px);
   height: calc(100% - 60px);
   display: flex;
+    div {
+      height: inherit;
+      width: inherit;
+    }
 }
+
 
 .circle {
   border-radius: 50%;
