moved styles into separate folder

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -80,7 +80,7 @@ table {
   padding: 10px;
   font-family: Monaco, Consolas, Monospace;
   background-color: rgb(18, 18, 68);
-  background-image:  url('./images/milky-way.jpg');
+  background-image:  url('../images/milky-way.jpg');
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
