--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -94,10 +94,6 @@ table {
   > .circle {
       grid-area: profile-picture;
       overflow: scroll;
-      height: 100px;
-      height: 95%;
-      min-height: 100px;
-      margin: 10px;
       display: none;
   }
 }
@@ -212,7 +208,11 @@ main {
     "nav main main"
     "nav main main";
     > .circle {
-      display: inline-block
+      display: inline-block;
+      height: 100px;
+      height: 90%;
+      min-height: 100px;
+      margin-top: 10px;
     }
   }
   nav {
