--- a/src/styles/pages/PageNotFound.scss
+++ b/src/styles/pages/PageNotFound.scss
@@ -1,18 +1,8 @@
-main div {
-    height: 100%;
-    width: 100%;
-    margin: 5vmin;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.PageNotFound p:nth-of-type(2){
+    margin-top: 10px;
 }
 
 img[alt="shrug"] {
     width: 100px;
     width: calc(50px + 5vmax);
-}
-
-p:nth-of-type(2){
-    margin-top: 10px;
 }
