--- a/src/styles/pages/Work.scss
+++ b/src/styles/pages/Work.scss
@@ -6,13 +6,15 @@
     p {
         padding: 10px;
     }
+    p:nth-of-type(2){
+        margin-top: 10px;
+    }
     ul {
         list-style-type: circle;
         margin-left: 50px;
     }
     strong {
-        letter-spacing:1px;
+        letter-spacing: 1px;
         font-weight: 900;
     }
-    overflow: auto;
 }
