modified css to look more tailored

--- a/src/styles/pages/Skills.scss
+++ b/src/styles/pages/Skills.scss
@@ -1,9 +1,15 @@
-.Skills div {
-    align-items: start;
-    text-align: left;
-    p {
-        margin-bottom: 10px;
+.Skills {
+    div {
+        align-items: start;
+        text-align: left;
+        p {
+            margin-bottom: 10px;
+        }
+    }   
+    > section {
+        margin: 1vmin;
     }
+
 }
 
 .selected {
