--- a/src/styles/pages/About.scss
+++ b/src/styles/pages/About.scss
@@ -12,7 +12,7 @@
     p:nth-of-type(1) {
         font-size: 18px;
         font-weight: bold;
-        color: rgb(131, 21, 21);
+        color:#b73111;
         align-self: flex-start;
     }
 }
@@ -21,8 +21,10 @@ img[src*="javascript-joke"]{
     display: block;
     max-width: 80%;
     margin: 10px;
-    margin-left: 20px;
+    margin-left: 5%;
     align-self: flex-start;
+    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.75);
+    border-radius: 5px;
 }
 
 img[src*="facepalm"]{
